--- a/app/src/main/res/layout/fragment_quote_list.xml
+++ b/app/src/main/res/layout/fragment_quote_list.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".views.QuoteListFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:id="@+id/quote_list_recycleView"
+         />
 
 </FrameLayout>
