--- a/app/src/main/res/layout/main_item_list.xml
+++ b/app/src/main/res/layout/main_item_list.xml
@@ -5,7 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <androidx.cardview.widget.CardView
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:elevation="2dp"
+    android:layout_margin="4dp"
+    android:padding="12dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,6 +30,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/app_name"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imvIcon"
         app:layout_constraintRight_toRightOf="@id/imvIcon"/>
